--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "express": "^5.1.0",
-    "prisma": "^6.13.0"
+    "prisma": "^6.13.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
