--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:deploy": "npx prisma migrate deploy && npx prisma generate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "prisma": "^6.13.0",
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "ts-node-dev": "^2.0.0",
