--- a/BACKEND/Dockerfile
+++ b/BACKEND/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts-alpine3.17
+FROM node:20-alpine
 
 WORKDIR /usr/src/app
 
@@ -7,5 +7,7 @@ COPY package.json package-lock.json ./
 RUN npm ci
 
 COPY . .
+
+EXPOSE 8080
 
 CMD ["sh", "-c", "npm run db:deploy && npm run dev"]
