replaced to arrow! both platform

--- a/Metropol-website/package.json
+++ b/Metropol-website/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "grapheme-splitter": "^1.0.4",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
